# daoxide

./: .gitignore  Cargo.toml  README.md  RELEASE.md  clippy.toml  rustfmt.toml
docs/: MIGRATION.md
examples/: minimal_client.rs  object_io.rs  pool_container.rs
scripts/: ci.sh
src/: async.rs  container.rs  error.rs  facade.rs  io.rs  iter.rs  lib.rs  object.rs  oit.rs  pool.rs  prelude.rs  query.rs  runtime.rs  tx.rs
src/unsafe_inner/: buffer.rs  ffi.rs  handle.rs  mod.rs  pointer.rs
tests/: baseline_test.rs  real_daos_e2e.rs
